--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: "* * * * *"
+    - cron: "20 9 * * *"
 
 jobs:
   build:
@@ -21,4 +21,4 @@ jobs:
         type: text # optional, default is text
         # message content
         at: all
-        content: "各位小伙伴，请记得完成今日健康打卡！
+        content: "各位小伙伴，请记得完成今日报工！\n >明珞数字化运营管理系统 \n >http://jm.minotech.cn:8002/login \n >明珞移动报工平台 \n >https://manhour.minotech.cn/"
